cfn_benchmark/cfn_templates/gcl-team__Experiment.OrchardCore.Main/Infrastructure.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: "Infrastructure for Orchard Core CMS"

# ========================================================================================================================
# The detail explanation for this template and each of the units below can be found on the blog post:
# https://cuteprogramming.wordpress.com/2025/03/09/automate-orchard-core-deployment-on-aws-ecs-with-cloudformation/
#
# **WARNING** This template creates services such as EC2 instances, Aurora database, Elastic Load Balancer, etc.
#             You will be billed for the AWS resources used if you create a stack from this template.
# ========================================================================================================================

Parameters:
  VpcCIDR:
    Type: String
    Default: 10.0.0.0/16
    Description: 'VPC CIDR Block'
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
  ApiGatewayStageName:
    Type: String
    Default: 'production'
    AllowedValues:
      - production
      - staging
      - development
  ServiceName:
    Type: String
    Default: cld-orchard-core
    Description: 'Your service name'
  CmsDBName:
    Type: String
    Default: orchardcorecmsdb
    Description: 'The name of the database which will be used by Orchard Core'
  CmsDbMasterUsername:
    Type: String
    Default: orchardcoreroot
    Description: 'The master username of the database'
  HostedZoneId:
    Type: String
    Default: ''
    Description: 'Your hosted zone id on Route 53'
  HostedZoneName:
    Type: String
    Default: ''
    Description: 'Your hosted zone name, aka custom domain name'
  CmsHostname:
    Type: String
    Default: orchardcms
    Description: 'Orchard Core host name, normally appears as subdomain in your custom domain'
  OrchardCoreImage:
    Type: String
    Default: ''
    Description: 'Your own Orchard Core image, best if it is hosted in ECR'
  EcsAmi:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ecs/optimized-ami/amazon-linux-2023/recommended/image_id
    Description: 'The Amazon Machine Image ID used for the cluster'

Resources:
  # Unit 01: IAM Role
  iamRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub "${AWS::StackName}-ecs"
      Path: !Sub "/${AWS::StackName}/"
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ecs-tasks.amazonaws.com
            Action:
              - sts:AssumeRole

  # Unit 02: CloudWatch Log Group
  ecsLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub "/ecs/${ServiceName}-log-group"
      RetentionInDays: 3
      Tags:
        - Key: Stack
          Value: !Ref AWS::StackName

  ecsLoggingPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: !Sub "${AWS::StackName}-cloudwatch-logs-policy"
      Roles:
        - !Ref iamRole
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Resource:
              - !Sub "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/ecs/${ServiceName}-log-group/*"

  # Unit 03: S3 Bucket
  mediaContentBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Join
        - '-'
        - - !Ref ServiceName
          - !Ref AWS::Region
          - !Ref AWS::AccountId
      OwnershipControls:
        Rules:
          - ObjectOwnership: BucketOwnerPreferred
      Tags:
        - Key: Stack
          Value: !Ref AWS::StackName

  mediaContentBucketPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: !Sub "${mediaContentBucket}-s3-policy"
      Roles:
        - !Ref iamRole
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
              - s3:ListBucket
            Resource: !GetAtt mediaContentBucket.Arn
          - Effect: Allow
            Action:
              - s3:PutObject
              - s3:GetObject
            Resource: !Join ["/", [!GetAtt mediaContentBucket.Arn, "*"]]

  # Unit 04: Aurora Database Cluster
  cmsDBClusterParameterGroup:
    Type: AWS::RDS::DBClusterParameterGroup
    Properties:
      Description: "Aurora Provisioned Postgres DB Cluster Parameter Group"
      Family: aurora-postgresql16
      Parameters:
        timezone: UTC  # Ensures consistent timestamps
        rds.force_ssl: 1  # Enforce SSL for security

  cmsDatabaseCluster:
    Type: AWS::RDS::DBCluster
    Properties:
      BackupRetentionPeriod: 7
      DatabaseName: !Ref CmsDBName
      DBClusterIdentifier: !Ref AWS::StackName
      DBClusterParameterGroupName: !Ref cmsDBClusterParameterGroup
      DeletionProtection: false  # For production, it should be true
      Engine: aurora-postgresql
      EngineMode: provisioned
      EngineVersion: 16.1
      MasterUsername: !Ref CmsDbMasterUsername
      MasterUserPassword: !Sub "{{resolve:ssm-secure:/OrchardCoreCms/DbPassword:1}}"
      DBSubnetGroupName: !Ref cmsDBSubnetGroup
      VpcSecurityGroupIds:
        - !GetAtt cmsDBSecurityGroup.GroupId
      Tags:
        - Key: Stack
          Value: !Ref AWS::StackName

  # Unit 05: Aurora Database Instance
  cmsDBInstance:
    Type: 'AWS::RDS::DBInstance'
    DeletionPolicy: Retain
    Properties:
      DBInstanceIdentifier: !Sub "${AWS::StackName}-db-instance"
      DBInstanceClass: db.t4g.medium
      DBClusterIdentifier: !Ref cmsDatabaseCluster
      DBSubnetGroupName: !Ref cmsDBSubnetGroup
      Engine: aurora-postgresql
      Tags:
        - Key: Stack
          Value: !Ref AWS::StackName

  # Unit 06: Virtual Private Cloud (VPC)
  vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      InstanceTenancy: default
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub "${AWS::AccountId}-${AWS::Region}-vpc"

  # Unit 07: Subnets and Subnet Groups
  # Public Subnets
  publicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpc
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: !Sub "${AWS::AccountId}-${AWS::Region}-public-subnet-1"

  publicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpc
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
        - Key: Name
          Value: !Sub "${AWS::AccountId}-${AWS::Region}-public-subnet-2"

  # Private Subnets
  privateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpc
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: !Sub "${AWS::AccountId}-${AWS::Region}-private-subnet-1"

  privateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpc
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
        - Key: Name
          Value: !Sub "${AWS::AccountId}-${AWS::Region}-private-subnet-2"

  cmsDBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: "Orchard Core CMS Postgres DB Subnet Group"
      SubnetIds:
        - !Ref privateSubnet1
        - !Ref privateSubnet2
      Tags:
        - Key: Stack
          Value: !Ref AWS::StackName

  # Unit 08: Security Groups
  cmsDBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "${CmsDBName}-security-group"
      GroupDescription: "Permits Access To CMS Aurora Database"
      VpcId: !Ref vpc
      SecurityGroupIngress:
      - CidrIp: !GetAtt privateSubnet1.CidrBlock
        IpProtocol: tcp
        FromPort: 5432
        ToPort: 5432
      - CidrIp: !GetAtt privateSubnet2.CidrBlock
        IpProtocol: tcp
        FromPort: 5432
        ToPort: 5432
      Tags:
        - Key: Name
          Value: !Sub "${CmsDBName}-security-group"
        - Key: Stack
          Value: !Ref AWS::StackName

  # Unit 09: Elastic Load Balancing (ELB)
  internalNlb:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub "${ServiceName}-private-nlb"
      Scheme: internal
      Type: network
      Subnets:
        - !Ref privateSubnet1
        - !Ref privateSubnet2
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false" # For production, it should be true
      Tags:
        - Key: Stack
          Value: !Ref AWS::StackName

  nlbTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn:
      - internalNlb
    Properties:
      Name: !Sub "${ServiceName}-target-group"
      Port: 80
      Protocol: TCP
      TargetType: instance
      VpcId: !Ref vpc
      HealthCheckProtocol: HTTP
      HealthCheckPort: 80
      HealthCheckPath: /health
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 10
      Tags:
        - Key: Stack
          Value: !Ref AWS::StackName

  internalNlbListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref internalNlb
      Port: 80
      Protocol: TCP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref nlbTargetGroup

  # Unit 10: API Gateway
  apiGatewayRestApi:
    Type: AWS::ApiGateway::RestApi
    Properties:
      Name: !Sub "${ServiceName}-api-gateway"
      DisableExecuteApiEndpoint: True
      EndpointConfiguration:
        Types:
          - REGIONAL
      Policy: ''

  apiGatewayVpcLink:
    Type: AWS::ApiGateway::VpcLink
    Description: "VPC link for API Gateway of Orchard Core"
    Properties:
      Name: !Sub "${ServiceName}-vpc-link"
      TargetArns:
        - !Ref internalNlb

  apiGatewayRootProxyResource:
    Type: AWS::ApiGateway::Resource
    Properties:
      RestApiId: !Ref apiGatewayRestApi
      ParentId: !GetAtt apiGatewayRestApi.RootResourceId
      PathPart: '{proxy+}'
    DependsOn:
      - apiGatewayRestApi

  apiGatewayRootMethod:
    Type: AWS::ApiGateway::Method
    Properties:
      HttpMethod: ANY
      AuthorizationType: NONE
      ApiKeyRequired: False
      RestApiId: !Ref apiGatewayRestApi
      ResourceId: !GetAtt apiGatewayRestApi.RootResourceId
      Integration:
        ConnectionId: !Ref apiGatewayVpcLink
        ConnectionType: VPC_LINK
        Type: HTTP_PROXY
        IntegrationHttpMethod: ANY
        Uri: !Sub "http://${internalNlb.DNSName}"
    DependsOn:
      - apiGatewayRootProxyResource

  apiGatewayRootProxyMethod:
    Type: AWS::ApiGateway::Method
    Properties:
      ApiKeyRequired: False
      RestApiId: !Ref apiGatewayRestApi
      ResourceId: !Ref apiGatewayRootProxyResource
      HttpMethod: ANY
      AuthorizationType: NONE
      RequestParameters:
        method.request.path.proxy: True
      Integration:
        ConnectionId: !Ref apiGatewayVpcLink
        ConnectionType: VPC_LINK
        Type: HTTP_PROXY
        RequestParameters:
          integration.request.path.proxy: method.request.path.proxy
        CacheKeyParameters:
          - method.request.path.proxy
        IntegrationHttpMethod: ANY
        IntegrationResponses:
          - StatusCode: 200
            SelectionPattern: 200
        Uri: !Sub "http://${internalNlb.DNSName}/{proxy}"
    DependsOn:
      - apiGatewayRootProxyResource
      - apiGatewayVpcLink

  apiGatewayDeployment202501011048:
    Type: AWS::ApiGateway::Deployment
    Properties:
      RestApiId: !Ref apiGatewayRestApi
    DependsOn:
      - apiGatewayRootMethod

  apiGatewayStage:
    Type: AWS::ApiGateway::Stage
    Properties:
      StageName: !Ref ApiGatewayStageName
      RestApiId: !Ref apiGatewayRestApi
      DeploymentId: !Ref apiGatewayDeployment202501011048
      MethodSettings:
        - ResourcePath: '/*'
          HttpMethod: '*'
          ThrottlingBurstLimit: 200
          ThrottlingRateLimit: 50
      Tags:
        - Key: Stack
          Value: !Ref AWS::StackName

  # Unit 11: Route53 for API Gateway
  apiGatewayCustomDomainCert:
    Type: AWS::CertificateManager::Certificate
    Properties:
      DomainName: !Sub "${CmsHostname}.${HostedZoneName}"
      ValidationMethod: 'DNS'
      DomainValidationOptions:
        - DomainName: !Sub "${CmsHostname}.${HostedZoneName}"
          HostedZoneId: !Ref HostedZoneId

  apiGatewayCustomDomainName:
    Type: AWS::ApiGateway::DomainName
    Properties:
      RegionalCertificateArn: !Ref apiGatewayCustomDomainCert
      DomainName: !Sub "${CmsHostname}.${HostedZoneName}"
      EndpointConfiguration:
        Types:
          - REGIONAL
      SecurityPolicy: TLS_1_2

  apiGatewayCustomDomainBasePathMapping:
    Type: AWS::ApiGateway::BasePathMapping
    Properties:
      DomainName: !Ref apiGatewayCustomDomainName
      RestApiId: !Ref apiGatewayRestApi
      Stage: !Ref apiGatewayStage

  apiGatewayCustomDomainARecord:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneName: !Sub "${HostedZoneName}."
      Name: !Sub "${CmsHostname}.${HostedZoneName}"
      Type: A
      AliasTarget:
        DNSName: !GetAtt apiGatewayCustomDomainName.RegionalDomainName
        HostedZoneId: !GetAtt apiGatewayCustomDomainName.RegionalHostedZoneId

  # Reference 01: ECS Cluster (Ref: https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/quickref-ecs.html)
  ecsInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: "ECSInternetGateway"

  vpcGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref vpc
      InternetGatewayId: !Ref ecsInternetGateway

  vpcPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref vpc

  vpcPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: vpcGatewayAttachment
    Properties:
      RouteTableId: !Ref vpcPublicRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref ecsInternetGateway

  vpcPublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref publicSubnet1
      RouteTableId: !Ref vpcPublicRouteTable

  vpcPublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref publicSubnet2
      RouteTableId: !Ref vpcPublicRouteTable

  ecsEip:
    Type: AWS::EC2::EIP

  ecsNatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt ecsEip.AllocationId
      SubnetId: !Ref publicSubnet1

  vpcPrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref vpc

  vpcPrivateRoute:
    Type: AWS::EC2::Route
    DependsOn: ecsNatGateway
    Properties:
      RouteTableId: !Ref vpcPrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref ecsNatGateway

  vpcPrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref privateSubnet1
      RouteTableId: !Ref vpcPrivateRouteTable

  vpcPrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref privateSubnet2
      RouteTableId: !Ref vpcPrivateRouteTable

  ecsCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: "core-cluster"
      ClusterSettings:
        - Name: containerInsights
          Value: enabled

  ecsAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    DependsOn:
      - ecsCluster
      - ec2Role
    Properties:
      VPCZoneIdentifier:
        - !Ref privateSubnet1
        - !Ref privateSubnet2
      LaunchTemplate:
        LaunchTemplateId: !Ref containerInstances
        Version: !GetAtt containerInstances.LatestVersionNumber
      MinSize: 1
      MaxSize: 2
      DesiredCapacity: 2
      NewInstancesProtectedFromScaleIn: true
    UpdatePolicy:
      AutoScalingReplacingUpdate:
        WillReplace: "true"

  containerInstances:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: "asg-launch-template"
      LaunchTemplateData:
        ImageId: !Ref EcsAmi
        InstanceType: "t3.large"
        IamInstanceProfile:
          Name: !Ref ec2InstanceProfile
        SecurityGroupIds:
          - !Ref ecsContainerHostSecurityGroup
        # This injected configuration file is how the EC2 instance
        # knows which ECS cluster it should be joining
        UserData:
          Fn::Base64: !Sub |
           #!/bin/bash -xe
           echo "ECS_CLUSTER=core-cluster" >> /etc/ecs/ecs.config
        # Disable IMDSv1, and require IMDSv2
        MetadataOptions:
          HttpEndpoint: enabled
          HttpTokens: required

  ec2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
      - !Ref ec2Role

  ecsCapacityProvider:
    Type: AWS::ECS::CapacityProvider
    Properties:
      AutoScalingGroupProvider:
        AutoScalingGroupArn: !Ref ecsAutoScalingGroup
        ManagedScaling:
          InstanceWarmupPeriod: 60
          MinimumScalingStepSize: 1
          MaximumScalingStepSize: 100
          Status: ENABLED
          TargetCapacity: 100
        ManagedTerminationProtection: ENABLED

  ecsCapacityProviderAssociation:
    Type: AWS::ECS::ClusterCapacityProviderAssociations
    Properties:
      CapacityProviders:
        - !Ref ecsCapacityProvider
      Cluster: !Ref ecsCluster
      DefaultCapacityProviderStrategy:
        - Base: 0
          CapacityProvider: !Ref ecsCapacityProvider
          Weight: 1

  ecsContainerHostSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Access to the EC2 hosts that run containers
      VpcId:
        Ref: vpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: "0.0.0.0/0"  # Allow all outbound traffic

  ec2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
      Policies:
        - PolicyName: ECSAdditionalPermissions
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - ecs:RegisterContainerInstance
                  - ecs:CreateCluster
                Resource: "*"
              - Effect: Allow
                Action:
                  - ec2:DescribeInstances
                  - ec2:DescribeSecurityGroups
                Resource: "*"

  ecsTaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ecs-tasks.amazonaws.com
            Action:
              - sts:AssumeRole
            Condition:
              ArnLike:
                aws:SourceArn: !Sub arn:${AWS::Partition}:ecs:${AWS::Region}:${AWS::AccountId}:*
              StringEquals:
                aws:SourceAccount: !Sub ${AWS::AccountId}
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy

  # Unit 12: ECS Task Definition and Service
  ecsTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: !Ref ServiceName
      TaskRoleArn: !GetAtt iamRole.Arn
      ContainerDefinitions:
        - Name: !Ref ServiceName
          Image: !Ref OrchardCoreImage
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Sub "/ecs/${ServiceName}-log-group"
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: ecs
          PortMappings:
            - ContainerPort: 5000
              HostPort: 80
              Protocol: tcp
          Cpu: 256
          Memory: 1024
          MemoryReservation: 512
          Environment:
            - Name: DatabaseEndpoint
              Value: !GetAtt cmsDBInstance.Endpoint.Address
          Essential: true
          HealthCheck:
            Command:
              - CMD-SHELL
              - "wget -q --spider http://localhost:5000/health || exit 1"
            Interval: 30
            Timeout: 5
            Retries: 3
            StartPeriod: 60

  ecsService:
    Type: AWS::ECS::Service
    DependsOn:
      - iamRole
      - internalNlb
      - nlbTargetGroup
      - internalNlbListener
    Properties:
      Cluster: !GetAtt ecsCluster.Arn
      DesiredCount: 1   # For production, it should be at least 2
      DeploymentConfiguration:
        MaximumPercent: 150    # For production, it can be 200
        MinimumHealthyPercent: 100    # For production, it can be 50 (at least 1 is running)
      LoadBalancers:
        - ContainerName: !Ref ServiceName
          ContainerPort: 5000
          TargetGroupArn: !Ref nlbTargetGroup
      PlacementStrategies:
        - Type: spread
          Field: attribute:ecs.availability-zone
        - Type: spread
          Field: instanceId
      TaskDefinition: !Ref ecsTaskDefinition
      ServiceName: !Ref ServiceName
      Role: !Sub "arn:${AWS::Partition}:iam::${AWS::AccountId}:role/aws-service-role/ecs.amazonaws.com/AWSServiceRoleForECS"
      HealthCheckGracePeriodSeconds: 60

  # Unit 13: CloudWatch Alarm
  highCpuUtilizationAlarm:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmName: !Sub "${AWS::StackName}-high-cpu"
      AlarmDescription: !Sub "ECS service ${AWS::StackName}: Cpu utilization above 75%"
      Namespace: AWS/ECS
      MetricName: CPUUtilization
      Dimensions:
        - Name: ClusterName
          Value: !Ref ecsCluster
        - Name: ServiceName
          Value: !Ref ServiceName
      Statistic: Average
      Period: 60
      EvaluationPeriods: 5
      Threshold: 75
      ComparisonOperator: GreaterThanOrEqualToThreshold
      TreatMissingData: notBreaching
      ActionsEnabled: true
      AlarmActions: []
      OKActions: []

  noRunningTasksAlarm:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmName: !Sub "${AWS::StackName}-no-task"
      AlarmDescription: !Sub "ECS service ${AWS::StackName}: No running ECS tasks for more than 5 mins"
      Namespace: AWS/ECS
      MetricName: RunningTaskCount
      Dimensions:
        - Name: ClusterName
          Value: !Ref ecsCluster
        - Name: ServiceName
          Value: !Ref ServiceName
      Statistic: Average
      Period: 60
      EvaluationPeriods: 5
      Threshold: 1
      ComparisonOperator: LessThanThreshold
      TreatMissingData: notBreaching
      ActionsEnabled: true
      AlarmActions: []
      OKActions: []
